Refactor SejmCollectFunctions and related classes to integrate JsonValidator for payload validation
- Updated SejmCollectCoordinatorEntityFunctions to use JsonValidator for validating completion and failure payloads.
- Modified SejmCollectFunctions to include JsonValidator for validating orchestration input and activity requests.
- Introduced new JSON schema files for CollectActivityRequest, CollectActivityResult, CollectCompletion, CollectFailure, CollectOrchestrationInput, and CollectResult.
- Enhanced unit tests to cover new validation logic and ensure proper handling of payloads.
- Adjusted method signatures and return types in SejmCollectFunctions to accommodate new data structures.